--- a/notes/chapter2.ipynb
+++ b/notes/chapter2.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "Copy of Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnvrh6boK6J98ZlZxFtR2W",
+      "authorship_tag": "ABX9TyM2h39KxKkl7Pzyzzrudttv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,9 +25,72 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "29jsfA1u8PD3"
+      },
+      "source": [
+        "Chapter 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "viKmqWJD8Vez"
+      },
+      "source": [
+        "source https://datascienceplus.com/understanding-the-covariance-matrix/\n",
+        "\n",
+        "https://meshlogic.github.io/posts/jupyter/linear-algebra/linear-algebra-numpy-2/\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JHVztYSRIomM"
+      },
+      "source": [
+        "## 2.3 Positive definite matrices"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jcoAKzxqI4_o"
+      },
+      "source": [
+        "quadratic form\n",
+        "\n",
+        "> Indented block\n",
+        "\n",
+        "\n",
+        "Spectral decomposition\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cqu_aZWDI5sR"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xFafJl-rI6Fv"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "3Y0X5jEvpauP"
+        "id": "0CQejgK-IuCe"
       },
       "source": [
         ""
